--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.26-bin.jar}:\
     ${file.reference.commons-pool-1.6.jar}:\
     ${file.reference.commons-dbcp-1.4.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${libs.struts.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
