--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,25 +28,25 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.commons-dbcp-1.4.jar=D:\\DesWeb\\commons-dbcp-1.4\\commons-dbcp-1.4.jar
-file.reference.commons-pool-1.6.jar=D:\\DesWeb\\commons-pool-1.6\\commons-pool-1.6.jar
-file.reference.javax.mail.jar=D:\\DesWeb\\librerias jar\\javax.mail.jar
-file.reference.mysql-connector-java-5.1.26-bin.jar=D:\\DesWeb\\mysql-connector-java-5.1.26-bin.jar
+file.reference.commons-dbcp-1.4.jar=/Users/andresgze/Documents/DesWeb/commons-dbcp-1.4/commons-dbcp-1.4.jar
+file.reference.commons-pool-1.6.jar=/Users/andresgze/Documents/DesWeb/commons-pool-1.6/commons-pool-1.6.jar
+file.reference.javax.mail.jar=/Users/andresgze/Documents/DesWeb/librerias jar/javax.mail.jar
+file.reference.mysql-connector-java-5.1.26-bin.jar=/Users/andresgze/Documents/DesWeb/mysql-connector-java-5.1.26-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-P20140317-1600.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.struts2lib-2-3-15.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.26-bin.jar}:\
+    ${libs.struts.classpath}:\
     ${file.reference.commons-pool-1.6.jar}:\
     ${file.reference.commons-dbcp-1.4.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${libs.struts.classpath}
+    ${file.reference.mysql-connector-java-5.1.26-bin.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,8 +68,6 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
 javadoc.private=false
-javadoc.reference.commons-dbcp-1.4.jar=C:\\Users\\Dillan\\Documents\\weband\\commons-dbcp-1.4\\commons-dbcp-1.4-javadoc.jar
-javadoc.reference.commons-pool-1.6.jar=C:\\Users\\Dillan\\Documents\\weband\\commons-pool-1.6\\commons-pool-1.6-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -85,8 +83,6 @@ run.test.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
 source.encoding=UTF-8
-source.reference.commons-dbcp-1.4.jar=C:\\Users\\Dillan\\Documents\\weband\\commons-dbcp-1.4\\commons-dbcp-1.4-sources.jar
-source.reference.commons-pool-1.6.jar=C:\\Users\\Dillan\\Documents\\weband\\commons-pool-1.6\\commons-pool-1.6-sources.jar
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
